To add the storage_engine option in conf.sample file.

--- a/src/backend/utils/misc/postgresql.conf.sample
+++ b/src/backend/utils/misc/postgresql.conf.sample
@@ -685,4 +685,9 @@
 # CUSTOMIZED OPTIONS
 #------------------------------------------------------------------------------
 
+# To specify the storage engine type for your relations.
+# The possible options are heap and zheap only.
+#
+#storage_engine='heap'
+#
 # Add settings for extensions here
