Support TPD which allows transaction slots to be extended beyond page boundary.
TPD is nothing but temporary data page consisting of extended
transaction slots from heap pages.  There are two primary reasons for
having TPD (a) In the heap page, we have fixed number of transaction
slots which can lead to deadlock, (b) To support cases where a large
number of transactions acquire SHARE or KEY SHARE locks on a single page.

The TPD overflow pages will be stored in the zheap itself, interleaved
with regular pages.  We have a meta page in zheap from which all overflow
pages are tracked.

TPD Entry acts like an extension of the transaction slot array in heap
page.  Tuple headers normally point to the transaction slot responsible
for the last modification, but since there aren't enough bits available
to do this in the case where a TPD is used, an offset -> slot mapping is
stored in the TPD entry itself.  This array can be used to get the slot
for tuples in heap page, but for undo tuples we can't use it because we
can't track multiple slots that have updated the same tuple.  So for
undo records, we record the TPD transaction slot number along with the undo
record.

This commit provides basic support of TPD entries where a fixed number
of entries per page can be allocated in extended pages.  There is more
to do in order to complete the support of TPD.  The remaining work
consisits of
1. Reuse transaction slots in TPD entry.
2. Allocate bigger TPD entries once the initially configured slots or
offsets are exhausted.
3. TPD page pruning and once the page is clean, we can add it to the
FSM.
4. Find the free TPD page from FSM.
5. Chain of TPD entries when the single TPD entry can't fit on a page.

Amit Kapila with the help of Dilip Kumar and Rafia Sabih

--- a/src/backend/access/zheap/Makefile
+++ b/src/backend/access/zheap/Makefile
@@ -12,6 +12,7 @@ subdir = src/backend/access/zheap
 top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS = prunezheap.o zheapam.o zheapamutils.o zheapamxlog.o zmultilocker.o
+OBJS = prunezheap.o tpd.o tpdxlog.o zheapam.o zheapamutils.o zheapamxlog.o \
+	zhio.o zmultilocker.o
 
 include $(top_srcdir)/src/backend/common.mk
