--- a/src/test/modules/test_undo/Makefile
+++ b/src/test/modules/test_undo/Makefile
@@ -2,12 +2,19 @@
 
 MODULE_big = test_undo
 OBJS = test_undo.o
-PGFILEDESC = "test_undo - functions for debugging undo"
+PGFILEDESC = "test_undo - a test module for the undo log manager"
 
 EXTENSION = test_undo
 DATA = test_undo--1.0.sql
 
 REGRESS = test_undo
+
+check: tablespace-setup
+
+.PHONY: tablespace-setup
+tablespace-setup:
+	rm -fr testtablespace1 testtablespace2
+	mkdir testtablespace1 testtablespace2
 
 ifdef USE_PGXS
 PG_CONFIG = pg_config
