Toast table support for zheap
Now, toast tables for zheap tables are created of zheap type. This imporves the
performance in terms of memory by reducing the bloat in toast tables. With zheap
type toast tables, as soon as a transaction deletes a tuple and commits, the space
can be utilised for the next insertion. Since, toast tables are larger in size
compared to ordinary tables and their updation is handled by insertion + deletion,
zheap storage is likely to benefit significantly.

Reviwed by Amit Khandekar and Amit Kapila.

--- a/src/backend/access/zheap/Makefile
+++ b/src/backend/access/zheap/Makefile
@@ -13,6 +13,6 @@ top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
 OBJS = prunetpd.o prunezheap.o tpd.o tpdxlog.o zheapam.o zheapamutils.o \
-	zheapamxlog.o zhio.o zmultilocker.o
+	zheapamxlog.o zhio.o zmultilocker.o ztuptoaster.o
 
 include $(top_srcdir)/src/backend/common.mk
