--- a/src/backend/access/zheap/Makefile
+++ b/src/backend/access/zheap/Makefile
@@ -12,7 +12,7 @@ subdir = src/backend/access/zheap
 top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS = prunetpd.o prunezheap.o tpd.o tpdxlog.o zheapam.o zheapamutils.o \
-	zheapamxlog.o zhio.o zmultilocker.o ztuptoaster.o
+OBJS = prunetpd.o prunezheap.o rewritezheap.o tpd.o tpdxlog.o zheapam.o \
+	zheapamutils.o zheapamxlog.o zhio.o zmultilocker.o ztuptoaster.o
 
 include $(top_srcdir)/src/backend/common.mk
