Implement ALTER TABLE SET TABLESPACE for zheap
To alter the tablespace for a zheap table, we copy the pages one-by-one
to the new tablespace. Following is the algorithm to perform the same:

For each zheap page,
    a. If it's a meta page, copy it as it is.
    b. If it's a TPD page, copy it as it is.
    c. If it's a zheap data page, apply pending aborts, copy the page
    and corresponding TPD page if we've rolled back any transaction from
    the TPD.

Patch by me. Reviewed by Amit Kapila.

--- a/src/test/modules/Makefile
+++ b/src/test/modules/Makefile
@@ -19,6 +19,7 @@ SUBDIRS = \
 		  test_rls_hooks \
 		  test_shm_mq \
 		  test_undo \
+		  test_alter_tablespace_zheap \
 		  worker_spi
 
 $(recurse)
