Move more tuple related API's to ztuple.c.

--- a/src/backend/access/zheap/Makefile
+++ b/src/backend/access/zheap/Makefile
@@ -13,8 +13,7 @@ top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
 OBJS = prunetpd.o prunezheap.o rewritezheap.o tpd.o tpdxlog.o zheapam.o \
-	zheapam_handler.o zheapamutils.o zheapam_visibility.o zheapamxlog.o \
-	zhio.o zmultilocker.o zpage.o zscan.o ztuple.o zvacuumlazy.o \
-	ztuptoaster.o
+	zheapam_handler.o zheapam_visibility.o zheapamxlog.o zhio.o \
+	zmultilocker.o zpage.o zscan.o ztuple.o zvacuumlazy.o ztuptoaster.o \
 
 include $(top_srcdir)/src/backend/common.mk
