Fix alter table space test for zheap

--- a/src/test/modules/test_alter_tablespace_zheap/atz.conf
+++ b/src/test/modules/test_alter_tablespace_zheap/atz.conf
@@ -2,5 +2,5 @@
 # perform the undo actions while performing alter table set tablespace command
 # by the backend itself.
 default_table_access_method = 'zheap'
-disable_undo_launcher = true
+enable_undo_launcher = false
 rollback_overflow_size = 0
