Test module for undo processing api
Basic test routine to test undo processing API.  It includes the
following scenarios:
1. Insert an undo record from a transaction and perform rollback
actions.
2. Subtransactions and rollback to savepoint.
3. Different undo persistence levels - permanent and temp.

I've also added a README which includes how to use the apis and our
future goals.
Kuntal Ghosh

--- a/src/backend/access/rmgrdesc/Makefile
+++ b/src/backend/access/rmgrdesc/Makefile
@@ -12,6 +12,6 @@ OBJS = brindesc.o clogdesc.o committsdesc.o dbasedesc.o genericdesc.o \
 	   gindesc.o gistdesc.o hashdesc.o heapdesc.o logicalmsgdesc.o \
 	   mxactdesc.o nbtdesc.o relmapdesc.o replorigindesc.o seqdesc.o \
 	   smgrdesc.o spgdesc.o standbydesc.o tblspcdesc.o undoactiondesc.o \
-	   undologdesc.o xactdesc.o xlogdesc.o
+	   undologdesc.o undotestdesc.o xactdesc.o xlogdesc.o
 
 include $(top_srcdir)/src/backend/common.mk
