--- a/src/backend/access/undo/Makefile
+++ b/src/backend/access/undo/Makefile
@@ -13,6 +13,6 @@ top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
 OBJS = discardworker.o undoaccess.o undoaction.o undoactionxlog.o undodiscard.o \
-	   undolog.o undorecord.o undorequest.o undoworker.o
+	   undolog.o undorecord.o undorequest.o undoworker.o undotest.o
 
 include $(top_srcdir)/src/backend/common.mk
