Port new undo request manager code to undo-record-set branch.
This isn't properly integrated with the rest of the code yet, but
it does compile, which is a start.

--- a/src/test/modules/Makefile
+++ b/src/test/modules/Makefile
@@ -22,6 +22,7 @@ SUBDIRS = \
 		  test_rbtree \
 		  test_rls_hooks \
 		  test_shm_mq \
+		  test_undo_request_manager \
 		  unsafe_tests \
 		  worker_spi
 
