--- a/src/backend/access/undo/Makefile
+++ b/src/backend/access/undo/Makefile
@@ -12,6 +12,7 @@ subdir = src/backend/access/undo
 top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS = undo.o undolog.o undopage.o undorecordset.o undorequest.o xactundo.o
+OBJS = undo.o undolog.o undopage.o undorecordset.o undorequest.o undoworker.o \
+	xactundo.o
 
 include $(top_srcdir)/src/backend/common.mk
