--- a/src/backend/access/Makefile
+++ b/src/backend/access/Makefile
@@ -9,7 +9,6 @@ top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
 SUBDIRS	    = brin common gin gist hash heap index nbtree rmgrdesc spgist \
-		foo \
-			  table tablesample transam undo
+	foo table tablesample transam undo undoxacttest
 
 include $(top_srcdir)/src/backend/common.mk
